@@ -2,6 +2,12 @@ Changes between nazghul-0.1.2 and nazghul-0.1.3
 
 gmcnutt:
 
+o [engine] Added EFFECT_RESTORE to support mana restoration potions. Had to
+  sacrifice EFFECT_NATURAL because the effects bitmask is out of bits. Turns
+  out bit 31 does not work right because of an issue with atoi interpreting it
+  as an overflow. This will be addressed in the 0.3.x line with the new effects
+  system.
+
 o [engine] When you declare a container on a map you now must provide a list of
   contents. For example:
 
